src/test/ui/reachable/expr_type.stderr
error: unreachable expression
  --> $DIR/expr_type.rs:19:13
   |
LL |     let x = {return}: !; //~ ERROR unreachable
   |             ^^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/expr_type.rs:14:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^

error: aborting due to previous error

